examples/test/testpolicy10197.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10197
  namespace: namespace356
spec:
  podSelector:
    matchLabels:
      key36: value14
      key9: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value17
      podSelector:
        matchLabels:
          key33: value48
          key39: value19
          key25: value15
